src/other/mico-2.3.12/test/idl/error/case13.idl

/*
 * Wrong union label with an enum as a discriminator.
 */

enum E {
  A,
  B
};

union U switch(E) {
  case A: long a;
  case C: char b;
};
